; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_session_op_close.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_session_op_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fileglob = type { i32* }
%struct.necp_session = type { i32 }

@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fileglob*, i32)* @necp_session_op_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @necp_session_op_close(%struct.fileglob* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fileglob*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.necp_session*, align 8
  store %struct.fileglob* %0, %struct.fileglob** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.fileglob*, %struct.fileglob** %4, align 8
  %8 = getelementptr inbounds %struct.fileglob, %struct.fileglob* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = bitcast i32* %9 to %struct.necp_session*
  store %struct.necp_session* %10, %struct.necp_session** %6, align 8
  %11 = load %struct.fileglob*, %struct.fileglob** %4, align 8
  %12 = getelementptr inbounds %struct.fileglob, %struct.fileglob* %11, i32 0, i32 0
  store i32* null, i32** %12, align 8
  %13 = load %struct.necp_session*, %struct.necp_session** %6, align 8
  %14 = icmp ne %struct.necp_session* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %2
  %16 = load %struct.necp_session*, %struct.necp_session** %6, align 8
  %17 = call i32 @necp_policy_mark_all_for_deletion(%struct.necp_session* %16)
  %18 = load %struct.necp_session*, %struct.necp_session** %6, align 8
  %19 = call i32 @necp_policy_apply_all(%struct.necp_session* %18)
  %20 = load %struct.necp_session*, %struct.necp_session** %6, align 8
  %21 = call i32 @necp_delete_session(%struct.necp_session* %20)
  store i32 0, i32* %3, align 4
  br label %24

22:                                               ; preds = %2
  %23 = load i32, i32* @ENOENT, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %22, %15
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @necp_policy_mark_all_for_deletion(%struct.necp_session*) #1

declare dso_local i32 @necp_policy_apply_all(%struct.necp_session*) #1

declare dso_local i32 @necp_delete_session(%struct.necp_session*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
